<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/daily_activity" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_music_video_black_24dp"
        android:title="@string/gallery" />

    <item
        android:id="@+id/navigation_music"
        android:icon="@drawable/ic_play_circle_filled_black_24dp"
        android:title="@string/music" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/profile" />


</menu>
